--- a/index.html
+++ b/index.html
@@ -229,16 +229,56 @@
         <div id="no-results" class="hidden text-center py-20"><p class="font-mono text-gray-500">No se encontraron productos en esta categoría.</p></div>
     </div>
 
-    <!-- FOOTER -->
-    <footer class="bg-[#050505] border-t border-white/10 pt-20 pb-8 px-6 text-center md:text-left mt-auto">
-        <div class="max-w-8xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
-            <div>
-                <h2 class="font-display text-2xl uppercase mb-2">Maison Arkon</h2>
-                <p class="text-gray-500 text-sm">Streetwear de lujo.</p>
+    <!-- FOOTER MEJORADO -->
+    <footer class="bg-black text-white border-t border-white/10 pt-16 pb-8 px-6 mt-auto">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 md:gap-8 mb-16 text-center md:text-left">
+            
+            <!-- Columna 1: Sobre Nosotros -->
+            <div class="flex flex-col items-center md:items-start">
+                <h2 class="font-display text-3xl uppercase tracking-tighter mb-4 text-white">Maison Arkon</h2>
+                <p class="text-gray-400 text-sm leading-relaxed max-w-xs font-sans">
+                    Estilo urbano y calidad premium. Redefiniendo el streetwear de lujo para quienes marcan su propio camino.
+                </p>
                 <div id="status-message" class="mt-2 text-xs text-red-400 hidden"></div>
             </div>
-            <div class="md:text-right text-gray-600 text-xs font-mono uppercase">
-                &copy; 2024 Maison Arkon.
+
+            <!-- Columna 2: Centro de Ayuda (Soporte) -->
+            <div class="flex flex-col items-center md:items-start">
+                <h3 class="font-mono text-xs font-bold uppercase tracking-widest text-gray-500 mb-6">Centro de Ayuda</h3>
+                <p class="text-gray-400 text-sm mb-4">¿Tienes dudas antes de comprar?</p>
+                
+                <div class="flex flex-col gap-4 w-full max-w-xs">
+                    <!-- Botón WhatsApp -->
+                    <a href="https://wa.me/584165530268" target="_blank" class="group flex items-center justify-center md:justify-start gap-3 bg-white/5 hover:bg-white/10 border border-white/10 px-5 py-3 rounded-lg transition-all duration-300">
+                        <i data-lucide="message-circle" class="w-5 h-5 text-[#25D366] group-hover:scale-110 transition-transform"></i>
+                        <span class="font-bold text-sm text-white group-hover:text-[#25D366] transition-colors">Chatea con nosotros</span>
+                    </a>
+
+                    <!-- Botón Instagram -->
+                    <a href="https://www.instagram.com/maisonarkon/" target="_blank" rel="noopener noreferrer" class="group flex items-center justify-center md:justify-start gap-3 px-5 py-2 hover:text-pink-500 transition-colors duration-300">
+                        <i data-lucide="instagram" class="w-5 h-5"></i>
+                        <span class="text-sm font-medium border-b border-transparent group-hover:border-pink-500">Síguenos @Arkon</span>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Columna 3: Navegación / Legales -->
+            <div class="flex flex-col items-center md:items-start">
+                <h3 class="font-mono text-xs font-bold uppercase tracking-widest text-gray-500 mb-6">Explorar</h3>
+                <ul class="space-y-4 text-sm font-sans text-gray-300">
+                    <li><button onclick="navigateTo('shop')" class="hover:text-arkon-red transition-colors">Shop All</button></li>
+                    <li><button onclick="navigateTo('shop', 'new')" class="hover:text-arkon-red transition-colors">New Arrivals</button></li>
+                    <li><a href="#" class="hover:text-arkon-red transition-colors">Términos y Condiciones</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Barra Inferior Copyright -->
+        <div class="border-t border-white/10 pt-8 flex flex-col md:flex-row justify-between items-center text-xs text-gray-600 font-mono uppercase tracking-wider">
+            <p>&copy; 2024 Maison Arkon. Todos los derechos reservados.</p>
+            <div class="flex gap-4 mt-4 md:mt-0">
+                <span class="text-gray-800">|</span>
+                <p>Designed for Excellence</p>
             </div>
         </div>
     </footer>
