--- a/index.html
+++ b/index.html
@@ -398,17 +398,17 @@
         const products = [
             { id: 1, name: "Gothic Logo Tee", price: 15.00, category: "Camisas", description: "Camiseta oversized con logo gótico.", image: "camiseta_crema.jpg", colors: [{ name: "Cream", hex: "#f5f5dc" }, { name: "Black", hex: "#000" }], sizes: ["S", "M", "L", "XL"], tag: "Best Seller" },
             { id: 2, name: "Chrome logo Tee", price: 15.00, category: "Camisas", description: "Camiseta algodón pesado logo Chrome.", image: "camiseta_blanca.jpg", colors: [{ name: "White", hex: "#fff" }], sizes: ["S", "M", "L", "XL"], tag: null },
-            { id: 3, name: "Chaos Patch Denim", price: 35.00, category: "Shorts", description: "Shorts denim vintage con parches.", image: "short.jpg", colors: [{ name: "Vintage Blue", hex: "#3b82f6" }], sizes: ["28", "30", "32"], tag: "Limited" },
+            { id: 3, name: "Chaos Patch Denim", price: 35.00, category: "Bermudas", description: "Bermuda denim vintage con parches.", image: "short.jpg", colors: [{ name: "Vintage Blue", hex: "#3b82f6" }], sizes: ["28", "30", "32"], tag: "Limited" },
             // NUEVOS PRODUCTOS AÑADIDOS
             { 
-                id: 8, name: "Dune Motion Tee (Front)", price: 50.00, category: "Camisas", 
+                id: 8, name: "Dune Motion Tee (Front)", price: 15.00, category: "Camisas", 
                 description: "Camiseta heavyweight en tono arena con gráfico Arkon 'Motion Blur' en el pecho. Corte boxy fit.", 
                 image: "dune_front.jpg", 
                 colors: [{ name: "Sand", hex: "#d2b48c" }], 
                 sizes: ["S", "M", "L", "XL"], tag: "New Drop" 
             },
             { 
-                id: 9, name: "Dune Motion Tee (Back)", price: 50.00, category: "Camisas", 
+                id: 9, name: "Dune Motion Tee (Back)", price: 15.00, category: "Camisas", 
                 description: "Variante 'Back Print' de la serie Dune Motion. Gráfico completo en espalda, frente minimalista.", 
                 image: "dune_back.jpg",
                 colors: [{ name: "Sand", hex: "#d2b48c" }], 
@@ -631,5 +631,6 @@
     </script>
 </body>
 </html>
+
 
 
